fixed the icon fav button on mobile cards

--- a/template/styles/style.css
+++ b/template/styles/style.css
@@ -21,22 +21,22 @@
 
 body {
     background-color: var(--primary-bg);
-    margin: 0; 
-    width: 100%; 
+    margin: 0;
+    width: 100%;
 }
 
 .content-wrapper {
     width: 100%;
-    max-width: 1180px; 
-    margin: 0 auto; 
+    max-width: 1180px;
+    margin: 0 auto;
 }
 
 .header {
     background-color: var(--header-grey);
-    width: 100%; 
+    width: 100%;
     z-index: 999;
     padding: 1.5rem;
-    position: relative; 
+    position: relative;
 }
 
 .header__flex {
@@ -87,7 +87,7 @@ body {
 .header__search-icon:hover {
     color: white;
     transform: scale(1.1);
-    transition: transform 0.2s ease-in-out; 
+    transition: transform 0.2s ease-in-out;
 }
 
 .search-title {
@@ -127,8 +127,8 @@ body {
 
 article:hover {
     transform: scale(1.1);
-    transition: transform 0.2s ease-in-out; 
-} 
+    transition: transform 0.2s ease-in-out;
+}
 
 /* RECOMMENDED INDEX MOVIES TITLE */
 .popular-title {
@@ -170,7 +170,7 @@ article:hover {
 .movie-information__card {
     color: white;
     display: grid;
-    grid-template-columns: repeat(3, auto); 
+    grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(2, auto);
     gap: 4em;
     padding: 4rem 0rem 0rem 4rem;
@@ -192,8 +192,8 @@ article:hover {
 .detailed-title {
     font-family: Montserrat;
     margin-bottom: 1rem;
-    grid-column: 2 / 4; 
-    grid-row: 1 / 2;   
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
     transition: color 0.2s ease-in-out;
     color: var(--text-yellow)
 }
@@ -205,7 +205,7 @@ article:hover {
 /* DETAILED MOVIE CARD PLOT */
 .detailed-info {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    grid-column: 2 / 4; 
+    grid-column: 2 / 4;
     grid-row: 1 / 2;
     margin-top: 4rem;
     font-style: italic;
@@ -281,16 +281,16 @@ article:hover {
     }
 
     .header__form {
-        position: relative; 
-        top: 100px;  
-        width: 100%;  
-        margin-top: 1rem;  
-        display: flex; 
+        position: relative;
+        top: 100px;
+        width: 100%;
+        margin-top: 1rem;
+        display: flex;
         justify-content: center;
     }
 
     .header__input {
-        width: 15rem; 
+        width: 15rem;
         padding: 0.8rem;
         border-radius: 2rem 0rem 0rem 2rem;
         border: none;
@@ -319,7 +319,7 @@ article:hover {
     .card-container__movie {
         position: relative;
         max-width: 100%;
-        overflow: hidden;
+        width: 100%;  
         top: 0;
         right: 0;
     }
@@ -327,7 +327,7 @@ article:hover {
     .favorite-btn {
         position: absolute;
         top: 0;
-        right: 0;
+        margin-left: 3rem;
         width: 5rem;
         height: 6rem;
     }
@@ -355,7 +355,7 @@ article:hover {
         width: 2rem;
         margin-left: 3rem;
     }
-    
+
     #favBtnIcon {
         display: block;
     }
@@ -373,4 +373,12 @@ article:hover {
         gap: 2rem;
         justify-content: center;
     }
+
+    /* .favorite-btn {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 5rem;
+        height: 6rem;
+    } */
 }
